scripts/e2e/cmd/runner/testdata/one-namespace-one-ingress/ssl-e2e-redirect/probe-hostname-bad.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ssl-redirect-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-
    appgw.ingress.kubernetes.io/health-probe-hostname: localhostx
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/backend-hostname: "test"
    appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "test"
    appgw.ingress.kubernetes.io/waf-policy-for-path : "/subscriptions/2ce9a29e-219e-422b-b9f8-5c5e54d5439e/resourceGroups/agic-e2e/providers/Microsoft.Network/applicationGatewayWebApplicationFirewallPolicies/waf-policy"
spec:
  tls:
    - secretName: testsecret-tls
  rules:
    - http:
        paths:
        - path: /index.html
          backend:
            serviceName: ssl-redirect-service
            servicePort: 443
        - path: /*
          backend:
            serviceName: ssl-redirect-service
            servicePort: 443
